[package]
name = "sevendrl"
version = "0.1.0"
edition = "2021"

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
specs = { version = "0.20.0", features = ["serde"] }
specs-derive = "0.4.1"
